samples/_failures_safe/1761615520_724791_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f61cdec.c: In function ‘main’:
./samples/SAFE/__tmp_8f61cdec.c:137:5: error: expected expression at end of input
  137 |     int count =
      |     ^~~
./samples/SAFE/__tmp_8f61cdec.c:137:5: error: expected declaration or statement at end of input
